added work sans google fonts

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <title>G3 Architect</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-  <header>
+<body class="work-sans-font">
+  <nav>
+  <header class="navbar">
+    <div class="brand">G3 Architects</div>
+  </nav>
 
   </header>
   <main>
